# claude-for-legal-turkish-maaty

./: .dockerignore  Dockerfile  NOTICE  README.md
.github/workflows/: docker-publish.yml
legal_plugins/: README.md  __init__.py  app.py  config.py  pyproject.toml  skill_loader.py  skill_registry.py
legal_plugins/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
legal_plugins/routes/: catalog.py  health.py  invoke.py
